--- a/public_html/index.html
+++ b/public_html/index.html
@@ -11,7 +11,8 @@
   <!-- <link rel="apple-touch-icon" href="icon.png"> -->
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="css/main-min.css">
+  <link rel="stylesheet" href="css/plugins.min.css">
+  <link rel="stylesheet" href="css/main.min.css">
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -22,8 +23,8 @@
   <br />
   <input id="datetimepicker" type="text" >
 
-  <script src="js/plugins-min.js"></script>
-  <script src="js/main-min.js"></script>
+  <script src="js/plugins.min.js"></script>
+  <script src="js/main.min.js"></script>
 
 </body>
 
